--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,10 +1,10 @@
 {% extends 'layouts/main.html' %}
-{% block title %}Booking-site{% endblock %}
+{% block title %}Fyyur{% endblock %}
 {% block content %}
 <div class="row">
 	<div class="col-sm-6">
-		<h1>Booking 🔥</h1>
-		<p class="lead">Where developers meet places</p>
+		<h1>Fyyur 🔥</h1>
+		<p class="lead">Where musical artists meet musical venues.</p>
 		<h3>
 			<a href="/venues"><button class="btn btn-primary btn-lg">Find a venue</button></a>
 			<a href="/venues/create"><button class="btn btn-default btn-lg">Post a venue</button></a>
@@ -17,6 +17,9 @@
 		<h3>
 			<a href="/shows/create"><button class="btn btn-default btn-lg">Post a show</button></a>
 		</h3>
+	</div>
+	<div class="col-sm-6 hidden-sm hidden-xs">
+		<img id="front-splash" src="{{ url_for('static',filename='img/front-splash.jpg') }}" alt="Front Photo of Musical Band" />
 	</div>
 </div>
 {% endblock %}
