--- a/templates/pages/artists.html
+++ b/templates/pages/artists.html
@@ -9,6 +9,9 @@
 			<div class="item">
 				<h5>{{ artist.name }}</h5>
 			</div>
+			<form action="{{url_for('delete_artists',artist_id=artist.id)}}" method="POSt">
+				<button type="submit" class="btn btn-danger">Delete Artist</button>
+			</form>
 		</a>
 	</li>
 	{% endfor %}
